[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "LearningRL"
version = "0.1"
description = "RL implementations to learn"
authors = [
    {name = "Jason Toskov", email = "jason.toskov@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["q_networks"]

#iSort
[tool.black]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
virtual_env = "stable_venv"

# rl_zoo3
# upgrade pip
# pydantic

# pip install --upgrade pip
# pip install git+https://github.com/DLR-RM/stable-baselines3
# pip install -e .
# pip install pydantic pyyaml tqdm gymnasium[accept-rom-license] gymnasium[all]
